# ShipYard

./: .gitignore  00_ORCHESTRATION_CONTROL.md  Instructions.md  README.md  create-notebooklm-context.sh  pyproject.toml  setup-shipyard.sh
.cursor/rules/: qpc-clinic-operator.mdc
ShipYard_Execution_Files_v2/: 00_Execution_Status_Summary.md  01_Order_001_Infrastructure_Routing.md  02_Order_005_009_ProSpine_Accountant.md  03_Priority_1_CoreSpine.md  04_Psynova_Healthcare_Wrapper.md  05_ShipYard_Web_Orchestration.md  06_ShipYard_CLI_Sync.md  07_Order_002_Portfolio_Refactor.md  08_Order_003_UI_Standardization.md  09_Order_004_Project_Card_Implementation.md  10_Cursor_TODO_Renaming_Instructions.md  10_Order_010_011_Domain_Alignment.md  11_Order_012_013_Visual_Standardization.md  12_Order_014_015_Gallery_Layers.md  13_Order_016_018_PsyNova_Healthcare.md  14_Order_019_020_ProSpine_Analyst.md  15_Order_021_Adaptive_D1.md  16_Order_022_RBAC.md  17_Order_023_Secret_Holding.md  18_Order_024_Gamification.md  19_Order_025_Expansion_Subdomains.md  20_Order_026_Wellness_Gateway.md  21_Order_027_BureauForge.md
bridge/: README.md  shipyard-bridge-agent.sh  shipyard-bridge.env.example
projects/qpc-virtual-clinic/: 00_NOTE_FOR_CHATGPT.md  00_SEQUENCE_INDEX.md  ARCHITECTURE.md  DEPLOY.md  EXECUTION_MIRROR.md  README.md  (+5 more)
scripts/: sync-project-index-json.mjs  todo-to-done.mjs
share/: shipyard.desktop
shipyard/: cli.py  handoffs.py  machine_env.py  paths.py  project_index.py  refurbish.py  register.py  validators.py
web/: README.md  package-lock.json  package.json  wrangler.jsonc
(+78 files in other folders)
